Fix SSO badge color in dark mode

--- a/docusaurus/src/scss/badge.scss
+++ b/docusaurus/src/scss/badge.scss
@@ -544,6 +544,9 @@ h2 .badge {
       --custom-badge-color: white;
       --custom-badge-tooltip-background-color: var(--strapi-neutral-100);
     }
+    &--sso {
+      --custom-badge-color: white;
+    }
     &--alpha,
     &--beta,
     &--featureflag,
